<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aidialog_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="conversandroid.MainActivity">

    <ImageButton
        android:id="@+id/speech_btn"
        android:layout_width="197dp"
        android:layout_height="197dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/chaplinicon"
        android:scaleType="fitXY"
        android:src="@drawable/chaplinface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="312dp" />

    <TextView
        android:id="@+id/textChaplin"
        android:layout_width="168dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/speechbtn_default"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/speech_btn"

        tools:text="@string/speechbtn_default" />

    <TextView
        android:id="@+id/conver"
        android:layout_width="343dp"
        android:layout_height="117dp"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/roomB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idScannerQRBt"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/roomA"
        style="@style/RaisesButton"
        android:layout_width="116dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/rooma"
        app:layout_constraintBottom_toTopOf="@+id/youarein"
        app:layout_constraintEnd_toStartOf="@+id/roomB"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/roomB"
        style="@style/RaisesButton"
        android:layout_width="116dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/roomb"
        app:layout_constraintBottom_toTopOf="@+id/youarein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/roomC"
        style="@style/RaisesButton"
        android:layout_width="116dp"
        android:layout_height="98dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/roomc"
        app:layout_constraintBottom_toTopOf="@+id/youarein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roomB" />

    <TextView
        android:id="@+id/youarein"
        android:layout_width="301dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/selectroom"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/speech_btn"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <Button
        android:id="@+id/idScannerQRBt"
        style="@style/RaisesButton"
        android:layout_width="53dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/QRBtn"
        app:layout_constraintBottom_toTopOf="@+id/roomA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/idHelpButton"
        style="@style/HelpButton"
        android:layout_width="31dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/help"
        android:src="@android:drawable/ic_menu_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/idScannerQRBt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/stopChaplinBtn"
        android:layout_width="55dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/stopChaplin"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintBottom_toTopOf="@+id/textChaplin"
        app:layout_constraintEnd_toStartOf="@+id/speech_btn"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youarein"
        app:layout_constraintVertical_bias="0.88" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/stopChaplin"
        app:layout_constraintBottom_toTopOf="@+id/stopChaplinBtn"
        app:layout_constraintEnd_toStartOf="@+id/speech_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youarein"
        app:layout_constraintVertical_bias="0.714" />
</android.support.constraint.ConstraintLayout>
